fixes: fx button styles in single line codheinter - event manager hinter alignment of the fx button. - event manager: fx is always active - widget inspectot fx btn container is visible once active

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -15158,6 +15158,10 @@ tbody {
   transition: opacity 0.3s ease;
 }
 
+.show-fx-button-container {
+  opacity: 1 !important;
+}
+
 .wrapper-div-code-editor:hover .fx-button-container {
   opacity: 1;
 }
